2008-02-28 Jim Sack <jgsack@san.rr.com>
	* src/test/gedread_util.py: add some comments
	* src/test/test/gedread_util_test.py: update per changes to
	_GedcomParse warning messages for skipped subordinates
	* src/GrampsDbUtils/_GedcomParse.py: #1851 discard empty notes
	and emit a warning message. Also add warnings for skipped
	subordinates in the same spirit (warn about bad/lost data)
	See self.want_parse_warnings for disabling those warnings.

2008-02-27 Brian Matherly <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py:
	Cleanup.

2008-02-28 Jim Sack <jgsack@san.rr.com>
	* src/GrampsDbUtils/_GedcomParse.py minor: remove redundant
	counting of errors dating to r8912 patch, I think. I don't believe
	this actually affects anything, but it is "clearly" an oversight

2008-02-29  Benny Malengier <benny.malengier@gramps-project.org>
	* src/GrampsDbUtils/_GedcomParse.py: find_family_from_handle returns tuple
	* src/Editors/_EditPerson.py: don't use find_person but get_person

2008-02-29 Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/plugins/Makefile.am: add CmdRef.py and DateParserDisplayTest.py to
    get make distcheck to run through.

2008-02-28 Jim Sack <jgsack@san.rr.com>
	* src/GrampsDbUtils/_GedcomParse.py fix oversight from r10099
	where eprefix was changed to event_prefix in gen/db/base.py
	(problem detected with unittest gramps_cli_test.py .. yay!)
	* src/gen/utils/test/callback_test.py fix unittest that had
	assumed the existence of a global that need not exist

2008-02-28  Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/PersonView.py: don't crash on click, 1794
	* src/PageView.py: don't crash on click, #1794

2008-02-28  Benny Malengier <benny.malengier@gramps-project.org>
	* src/ViewManager.py: allow for info dialog after import
	* src/gen/db/base.py: find returns if new object or not
	* src/gen/db/dbdir.py: find returns if new object or not
	* src/plugins/ImportGeneWeb.py: allow multiple mime types